@startuml
class User {
    + int id
    + String username
    + String email
    + String password
    + String role
}

class Family {
    + int id
    + String familyName
}

class Type {
    + int id
    + String typeName
    + Family family
}

class Specimen {
    + int id
    + String name
    + Type type
    + Family family
    + String gender
    + String countryOfOrigin
    + LocalDate dateOfEntry
    + String imageUrl
}

User "1" -- "0..*" Specimen
Family "1" -- "0..*" Type
Type "1" -- "0..*" Specimen
@enduml
